--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,10 @@ tasks.withType(JavaCompile) {
 }
 
 dependencies {
+    //스프링 설치
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.0'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.0'
+
     compileOnly('jakarta.platform:jakarta.jakartaee-api:9.1.0')
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
