--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,21 @@
 
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
+        <welcome-file>index.htm</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>default.html</welcome-file>
+        <welcome-file>default.htm</welcome-file>
+        <welcome-file>default.jsp</welcome-file>
     </welcome-file-list>
+
+    <servlet>
+        <servlet-name>hi</servlet-name>
+        <servlet-class>bean.Hi2</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>hi</servlet-name>
+        <url-pattern>/hi222</url-pattern>
+    </servlet-mapping>
 
 
 </web-app>
